3ano/2-Semestre/LFA/bloco2/b2_04/PrefixCalculator.g4
grammar PrefixCalculator;

program: stat* EOF;

stat: expr? NEWLINE;

expr: op=('*'|'/'|'%'|'+'|'-') expr expr   # ExprBinary
    | op=('+'|'-') expr                   # ExprUnary
    | Integer                             # ExprInteger
    | '(' expr ')'                        # ExprParent
    ;

Integer: [0-9]+;
NEWLINE: '\r'? '\n';
WS: [ \t]+ -> skip;
